<resources>
    <string name="app_name">Countdown</string>

    <string name="years">YRS</string>
    <string name="days">DAY</string>
    <string name="hours">HRS</string>
    <string name="minutes">MIN</string>
    <string name="seconds">SEC</string>
    <string name="zero">00</string>

    <string name="datetimer_title">DATETIMER</string>
    <string name="stopwatch_title">STOPWATCH</string>

    <string name="bckgrnd">BCKGRND</string>

</resources>
